--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -47,7 +47,8 @@ body {
   color: white;
   font-size: medium;
   background-color: #40474f;
-  font-family: "Sedan", serif;
+  font-family: Helvetica Neue, Arial, sans-serif;
+  /* font-family: "Sedan", serif; */
   font-weight: 400;
   font-style: normal;
 }
