--- a/frontend/src/components/Login/style.css
+++ b/frontend/src/components/Login/style.css
@@ -80,6 +80,13 @@ body {
   font-size: 12px;
 }
 
+.login-box .user-box input:not(:empty) ~ label {
+  top: -20px;
+  left: 0;
+  color: #03e9f4;
+  font-size: 12px;
+}
+
 .login-box form a {
   position: relative;
   display: inline-block;
