--- a/frontend/src/components/NotLoggedWelcome/style.css
+++ b/frontend/src/components/NotLoggedWelcome/style.css
@@ -1,13 +1,3 @@
-/* .my-box {
-  width: 300px;
-  padding: 20px;
-  text-align: center;
-  transition: transform 0.5s ease;
-}
-
-.my-box:hover {
-  transform: scale(1.2);
-} */
 .my-box {
   width: 300px;
   padding: 20px;
@@ -25,4 +15,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+.max-height {
+  height: calc(100vh - 120px);
+  overflow: hidden;
 }
