--- a/frontend/src/components/Login/style.css
+++ b/frontend/src/components/Login/style.css
@@ -1,49 +1,22 @@
-/* .form-container {
-  width: 350px;
-  height: 300px;
-  position: relative;
-  overflow: hidden;
-  background: url("./assets/bg-form.jpg") no-repeat center/ cover;
-  border-radius: 10px;
-  box-shadow: 5px 20px 50px #000;
-}
-
-.backdrop-filter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(10px);
-} */
-
-/* html {
-  height: 100%;
-}
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
-  background: linear-gradient(#141e30, #243b55);
-} */
-
 .login-box {
+  color: black;
   position: absolute;
   top: 40%;
   left: 50%;
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 160, 149, 0.737);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
 }
 
 .login-box h2 {
+  color: black;
   margin: 0 0 30px;
   padding: 0;
-  color: #fff;
+
   text-align: center;
 }
 
@@ -55,7 +28,7 @@ body {
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: black;
   margin-bottom: 30px;
   border: none;
   border-bottom: 1px solid #fff;
@@ -68,23 +41,22 @@ body {
   left: 0;
   padding: 10px 0;
   font-size: 16px;
-  color: #fff;
+  color: black;
   pointer-events: none;
   transition: 0.5s;
+  transform-origin: top left;
 }
 
-.login-box .user-box input:focus ~ label {
+.login-box .user-box input:focus ~ label,
+.login-box .user-box input:not(:placeholder-shown) ~ label {
   top: -20px;
   left: 0;
   color: #03e9f4;
   font-size: 12px;
 }
 
-.login-box .user-box input:not(:empty) ~ label {
-  top: -20px;
-  left: 0;
-  color: #03e9f4;
-  font-size: 12px;
+.login-box .user-box input:focus::placeholder {
+  opacity: 0;
 }
 
 .login-box form a {
@@ -92,7 +64,7 @@ body {
   display: inline-block;
   padding: 10px 20px;
   /* color: #03e9f4; */
-  color: #ffffff;
+  color: black;
   font-size: 16px;
   text-decoration: none;
   text-transform: uppercase;
@@ -104,7 +76,7 @@ body {
 
 .login-box a:hover {
   background: #03e9f4;
-  color: #fff;
+  color: black;
   border-radius: 15px;
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4;
 }
