--- a/frontend/src/components/Expenses/style.css
+++ b/frontend/src/components/Expenses/style.css
@@ -16,6 +16,6 @@
   cursor: crosshair;
 }
 
-.max-height {
-  height: calc(100vh - 200px);
-}
+/* .max-height {
+  height: calc(100vh - 185px);
+} */
