--- a/frontend/src/components/Login/style.css
+++ b/frontend/src/components/Login/style.css
@@ -1,22 +1,21 @@
 .login-box {
-  color: black;
+  color: white;
   position: absolute;
   top: 40%;
   left: 50%;
   width: 400px;
   padding: 40px;
   transform: translate(-50%, -50%);
-  background: rgba(0, 160, 149, 0.737);
+  background: rgb(13, 110, 253);
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0, 0, 0, 0.6);
   border-radius: 10px;
 }
 
 .login-box h2 {
-  color: black;
+  color: white;
   margin: 0 0 30px;
   padding: 0;
-
   text-align: center;
 }
 
@@ -28,7 +27,7 @@
   width: 100%;
   padding: 10px 0;
   font-size: 16px;
-  color: black;
+  color: white;
   margin-bottom: 30px;
   border: none;
   border-bottom: 1px solid #fff;
@@ -51,7 +50,7 @@
 .login-box .user-box input:not(:placeholder-shown) ~ label {
   top: -20px;
   left: 0;
-  color: #03e9f4;
+  color: white;
   font-size: 12px;
 }
 
@@ -76,7 +75,12 @@
 
 .login-box a:hover {
   background: #03e9f4;
-  color: black;
+  color: rgb(44, 12, 225);
   border-radius: 15px;
   box-shadow: 0 0 5px #03e9f4, 0 0 25px #03e9f4, 0 0 50px #03e9f4, 0 0 100px #03e9f4;
+}
+
+input:-webkit-autofill {
+  color: white;
+  -webkit-box-shadow: 0 0 0 30px rgb(13, 110, 253) inset !important;
 }
